--- a/wle_aligner/tsconfig.json
+++ b/wle_aligner/tsconfig.json
@@ -7,6 +7,9 @@
         "experimentalDecorators": true,
         "resolveJsonModule": true,
         "strictNullChecks": true,
+        "types": [
+            "node"
+        ],
         "lib": [
             "DOM",
             "ES2022"
