--- a/wle_aligner/package.json
+++ b/wle_aligner/package.json
@@ -24,6 +24,13 @@
     ],
     "type": "module",
     "main": "./dist/run_wle_aligner.js",
+    "dependencies": {
+        "@playkostudios/jsonc-ast": "^0.1.3",
+        "isolated-vm": "^4.6.0"
+    },
+    "peerDependencies": {
+        "@wonderlandengine/api": "^1.1.3"
+    },
     "devDependencies": {
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
