--- a/wle_aligner/wle_uuidify/tsconfig.json
+++ b/wle_aligner/wle_uuidify/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "dist",
         "target": "ES2022",
         "module": "nodenext",
         "moduleResolution": "nodenext",
@@ -16,9 +17,11 @@
     },
     "include": [
         ".",
-        "src"
+        "..",
+        "../src"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "dist"
     ]
 }
