Moved common project into common

--- a/wle_aligner/wle_uuidify/tsconfig.json
+++ b/wle_aligner/wle_uuidify/tsconfig.json
@@ -17,8 +17,8 @@
     },
     "include": [
         ".",
-        "..",
-        "../src"
+        "../common",
+        "../common/src"
     ],
     "exclude": [
         "node_modules",
