--- a/wle_aligner/common/package.json
+++ b/wle_aligner/common/package.json
@@ -10,6 +10,7 @@
     "type": "module",
     "dependencies": {
         "@playkostudios/jsonc-ast": "^0.1.3",
+        "commander": "^11.1.0",
         "isolated-vm": "^4.6.0"
     },
     "peerDependencies": {
