--- a/wle_aligner/common/package.json
+++ b/wle_aligner/common/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.11.0",
+        "@types/validator": "^13.11.9",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
         "eslint": "^8.56.0",
