--- a/wle_aligner/wle_uuidify/tsconfig.json
+++ b/wle_aligner/wle_uuidify/tsconfig.json
@@ -6,7 +6,17 @@
         "moduleResolution": "nodenext",
         "experimentalDecorators": true,
         "resolveJsonModule": true,
-        "strictNullChecks": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "alwaysStrict": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noImplicitAny": true,
+        "noImplicitOverride": true,
+        "sourceMap": true,
+        "inlineSources": true,
+        "declaration": true,
         "types": [
             "node"
         ],
