--- a/wle_aligner/common/tsconfig.json
+++ b/wle_aligner/common/tsconfig.json
@@ -6,6 +6,7 @@
         "experimentalDecorators": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
+        "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
         "alwaysStrict": true,
@@ -25,7 +26,6 @@
         ]
     },
     "include": [
-        ".",
         "src"
     ],
     "exclude": [
