--- a/wle_aligner/wle_uuidify/tsconfig.json
+++ b/wle_aligner/wle_uuidify/tsconfig.json
@@ -7,6 +7,7 @@
         "experimentalDecorators": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
+        "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
         "alwaysStrict": true,
@@ -26,8 +27,6 @@
         ]
     },
     "include": [
-        ".",
-        "../common",
         "../common/src"
     ],
     "exclude": [
