--- a/wle_aligner/common/tsconfig.json
+++ b/wle_aligner/common/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "dist",
         "target": "ES2022",
         "module": "nodenext",
         "moduleResolution": "nodenext",
