--- a/wle_aligner/wle_uuidify/package.json
+++ b/wle_aligner/wle_uuidify/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wle-uuidify",
-    "version": "0.2.6",
+    "version": "0.3.0",
     "author": "Pipo",
     "description": "Switch Wonderland Engine project incremental number IDs to UUID",
     "homepage": "https://github.com/SignorPipo/wle-aligner",
@@ -29,21 +29,22 @@
     "main": "./dist/wle_uuidify/index.js",
     "dependencies": {
         "@playkostudios/jsonc-ast": "^0.1.5",
-        "commander": "^11.1.0",
-        "glob": "^10.3.10",
-        "isolated-vm": "^4.6.0"
-    },
-    "peerDependencies": {
-        "@wonderlandengine/api": "^1.1.5"
+        "commander": "^12.1.0",
+        "glob": "^11.0.0",
+        "isolated-vm": "^5.0.1"
     },
     "devDependencies": {
-        "@types/node": "^20.11.0",
+        "@tsconfig/node20": "^20.1.4",
+        "@types/node": "^20.1.4",
+        "typescript": "^5.7.2",
         "@types/validator": "^13.11.9",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
         "eslint": "^8.56.0",
-        "eslint-plugin-deprecation": "^2.0.0",
-        "typescript": "^5.3.3"
+        "eslint-plugin-deprecation": "^2.0.0"
+    },
+    "peerDependencies": {
+        "@wonderlandengine/api": ">=1.1.5 <1.3"
     },
     "scripts": {
         "build": "tsc",
