--- a/wle_aligner/wle_uuidify/tsconfig.json
+++ b/wle_aligner/wle_uuidify/tsconfig.json
@@ -27,6 +27,7 @@
         ]
     },
     "include": [
-        "../common/src"
+        "../common/src/common",
+        "../common/src/wle_uuidify"
     ]
 }
