--- a/wle_aligner/common/package.json
+++ b/wle_aligner/common/package.json
@@ -26,6 +26,6 @@
         "eslint-plugin-deprecation": "^2.0.0"
     },
     "peerDependencies": {
-        "@wonderlandengine/api": ">=1.1.5 <1.3"
+        "@wonderlandengine/api": "~1.3.0"
     }
 }
