--- a/wle_aligner/wle_uuidify/package.json
+++ b/wle_aligner/wle_uuidify/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wle-uuidify",
-    "version": "0.3.1",
+    "version": "0.4.0",
     "author": "Pipo",
     "description": "Switch Wonderland Engine project incremental number IDs to UUID",
     "homepage": "https://github.com/SignorPipo/wle-aligner",
@@ -44,7 +44,7 @@
         "eslint-plugin-deprecation": "^2.0.0"
     },
     "peerDependencies": {
-        "@wonderlandengine/api": ">=1.1.5 <1.3"
+        "@wonderlandengine/api": "~1.3.0"
     },
     "scripts": {
         "build": "tsc",
