--- a/wle_aligner/wle_aligner/package.json
+++ b/wle_aligner/wle_aligner/package.json
@@ -30,19 +30,19 @@
     "dependencies": {
         "@playkostudios/jsonc-ast": "^0.1.5",
         "commander": "^12.1.0",
-        "glob": "^11.0.0",
-        "isolated-vm": "^5.0.1",
-        "validator": "^13.11.0"
+        "glob": "^11.0.1",
+        "isolated-vm": "^5.0.3",
+        "validator": "^13.12.0"
     },
     "devDependencies": {
         "@tsconfig/node20": "^20.1.4",
-        "@types/node": "^20.1.4",
-        "typescript": "^5.7.2",
-        "@types/validator": "^13.11.9",
-        "@typescript-eslint/eslint-plugin": "^6.18.1",
-        "@typescript-eslint/parser": "^6.18.1",
-        "eslint": "^8.56.0",
-        "eslint-plugin-deprecation": "^2.0.0"
+        "@types/node": "^20.17.16",
+        "@types/validator": "^13.12.2",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "eslint": "^8.57.1",
+        "eslint-plugin-deprecation": "^2.0.0",
+        "typescript": "^5.7.3"
     },
     "peerDependencies": {
         "@wonderlandengine/api": "~1.3.0"
