--- a/wle_aligner/common/package.json
+++ b/wle_aligner/common/package.json
@@ -26,6 +26,6 @@
         "typescript": "^5.7.3"
     },
     "peerDependencies": {
-        "@wonderlandengine/api": "~1.3.0"
+        "@wonderlandengine/api": "^1.3.0"
     }
 }
