--- a/wle_aligner/wle_uuidify/package.json
+++ b/wle_aligner/wle_uuidify/package.json
@@ -44,7 +44,7 @@
         "typescript": "^5.7.3"
     },
     "peerDependencies": {
-        "@wonderlandengine/api": "~1.3.0"
+        "@wonderlandengine/api": "^1.3.0"
     },
     "scripts": {
         "build": "tsc",
